@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2009 National Institute of Advanced Industrial Science
+ * Copyright 2006-2009,2015 National Institute of Advanced Industrial Science
  * and Technology (AIST), and contributors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -36,7 +36,7 @@ import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.CommandLineParser;
 import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
-import org.apache.commons.cli.PosixParser;
+import org.apache.commons.cli.DefaultParser;
 
 import ow.messaging.MessagingFactory;
 import ow.messaging.util.MessagingUtility;
@@ -148,7 +148,7 @@ public class Main {
 		opts.addOption("s", "selfipaddress", true, "self IP address (and port)");
 		opts.addOption("c", "controltargetlistfile", true, "control target list file");
 
-		CommandLineParser parser = new PosixParser();
+		CommandLineParser parser = new DefaultParser();
 		CommandLine cmd = null;
 		try {
 			cmd = parser.parse(opts, args);
