@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2009,2012 National Institute of Advanced Industrial Science
+ * Copyright 2006-2009,2012,2015 National Institute of Advanced Industrial Science
  * and Technology (AIST), and contributors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -28,7 +28,7 @@ import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.CommandLineParser;
 import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
-import org.apache.commons.cli.PosixParser;
+import org.apache.commons.cli.DefaultParser;
 
 import ow.id.ID;
 import ow.id.IDAddressPair;
@@ -137,7 +137,7 @@ public final class Main extends AbstractMcastBasedTool
 		opts.addOption("A", "acl", true, "access control list file");
 		opts.addOption("n", "disablestdin", false, "disable standard input");
 
-		CommandLineParser parser = new PosixParser();
+		CommandLineParser parser = new DefaultParser();
 		CommandLine cmd = null;
 		try {
 			cmd = parser.parse(opts, args);
