@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2007 National Institute of Advanced Industrial Science
+ * Copyright 2006-2007,2015 National Institute of Advanced Industrial Science
  * and Technology (AIST), and contributors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,7 +21,7 @@ import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.CommandLineParser;
 import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
-import org.apache.commons.cli.PosixParser;
+import org.apache.commons.cli.DefaultParser;
 
 import ow.routing.RoutingAlgorithmConfiguration;
 
@@ -52,7 +52,7 @@ public final class Main {
 		opts.addOption("s", "selfipaddress", true, "self IP address (and port)");
 		opts.addOption("N", "no-upnp", false, "disable UPnP address port mapping");
 
-		CommandLineParser parser = new PosixParser();
+		CommandLineParser parser = new DefaultParser();
 		CommandLine cmd = null;
 		try {
 			cmd = parser.parse(opts, args);
