@@ -8,6 +8,7 @@
 
 	* lib/commons-cli-*.jar
 	Apache Commons CLI was updated from 1.3 to 1.3.1.
+	Main classes use DefaultParser class instead of deprecated PosixParser.
 
 2015-06-15  Kazuyuki Shudo  <shudo@computer.org>
 
